# deepmol_case_studies

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README_pypi.md  pyproject.toml  requirements.txt  requirements_automl_benchmark.txt  requirements_tdc_commons.txt  run.sh  run_automl_benchmark.sh  setup.cfg
scripts/: HIA_Hou_pipeline_deepchem.db  bioavailability.py  cannabinoids_small.csv  deepmol.log.2023-11-04  example.ipynb  generate_images.ipynb  predictions.csv  tdc_bioavailability.py  test.csv  test_molecules.csv  test_predictions.csv  test_predictions.ipynb  train_and_evaluate.ipynb
scripts/HIA_Hou/: hia_hou.py
scripts/alkaloid_data/: molecular_starter_prediction.py  pipeline_analysis.ipynb
scripts/alkaloid_data/data/: alkaloid_data.csv
scripts/benchmark_automl/: benchmark_resources.py
scripts/benchmark_automl/data_for_benchmark/: CYP2D6_Veith.csv  generate_splits_benchmarrk.py  pgp.csv
scripts/benchmark_automl/runtimes/: 3d_features_benchmark.csv  3d_structure_benchmark.csv  feature_selectors_benchmark.csv  featurizers_benchmark.csv  generate_latex_tables.ipynb  scalers_benchmark.csv  spliters_benchmark.csv  standardizers_benchmark.csv  unbalanced_learn_benchmark.csv
scripts/bioavailability/: tdc_bioavailability.py
scripts/caco/: tdc_caco.py
scripts/retrain/np_classifier/: retrain.py
scripts/tdc/: get_results_test_set.py  tdc_test.ipynb
scripts/tdc/ames/: ames.db  ames.py  ames_test_set.csv  ames_trials.csv  results.ipynb
scripts/tdc/aqsol/: aqsol.py
scripts/tdc/bbb/: bbb.db  bbb.py  bbb_test_set.csv  bbb_trials.csv  results.ipynb
scripts/tdc/bioavailability/: bioavailability.db  bioavailability.py  bioavailability_test_set.csv  results.ipynb  (+1 more)
src/dcs/: _utils.py  evaluation.py
src/deepmol_models/: __init__.py  _utils.py  bokeh_graph.py  evaluation.py
tests/: test_predictions.py
tests/data/: test.csv
(+186 files in other folders)
