[metadata]
name = dcs
version = 0.0.0
description = DeepMol Case Studies
keywords = machine-learning, deep-learning, cheminformatics, drug-discovery
author = DeepMol Team
license = BSD 2-Clause License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires =
    deepmol[all]==1.0.4
    PyTDC==0.4.1
    ipython

dependency_links=[
        'git+https://github.com/samoturk/mol2vec#egg=mol2vec'
    ]

[options.packages.find]
where = src

[options.package_data]
dcs = py.typed

[flake8]
max-line-length = 160