[metadata]
name = deepmol_models
version = 0.0.5
description = DeepMol Case Studies
keywords = machine-learning, deep-learning, cheminformatics, drug-discovery
author = DeepMol Team
license = BSD 2-Clause License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
long_description = file: README_pypi.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    deepmol[all]==1.1.11
    scikit-learn==1.2.0
    boruta~=0.3
    bokehmol
    rich

[options.packages.find]
where = src

[options.package_data]
dcs = py.typed

[flake8]
max-line-length = 160